--- a/doc/help/user/rules/rules
+++ b/doc/help/user/rules/rules
@@ -1,21 +1,29 @@
-%^CYAN%^The rules are in place to make the game fun to play, to respect the boundaries of those who are playing it, or to ensure that everyone is able to play on equal footing.%^RESET%^
+%^CYAN%^GOLDEN RULES%^RESET%^
 
-If you see something that you suspect was illegal or are dealt with unfairly by staff you are encouraged to contact law group. To that in-game you have to use %^ORANGE%^<lawmail>%^RESET%^ command.
+These rules have been put in place to make the game fair and enjoyable for everyone. Knowing and abiding by these rules are conditions for playing Sundering Shadows.
 
-You are expected to know and agree with the rules as a condition of playing ShadowGate.
+If you notice something that may be illegal, or if you encounter a dispute with another player or staff-member, contact the law team at %^ORANGE%^admin@sunderingshadows.com%^RESET%^ or via the %^ORANGE%^<lawmail>%^RESET%^ command.
 
-%^ULINE%^%^MAGENTA%^Rule 1%^RESET%^%^CYAN%^ Be excellent to each other.%^RESET%^
-  Being not nice out of roleplay won't be tolerated. Bug abuse, extensive game automation, logging in on multiple characters at the same time, giving out spoilers and quest information won't be allowed since it is making game unfair to others.
+%^ULINE%^%^MAGENTA%^Rule 1:%^RESET%^ Be kind and respectful towards your fellow players and our staff. This is a game, and we can settle/adjudicate all disagreements amicably. Though the game allows you to role-play an evil character, always be considerate out of character (OOC).
+ 
+%^ULINE%^%^MAGENTA%^Rule 2:%^RESET%^ We are a role-playing MUD. When interacting with other characters in the game world, you are expected to stay in character (IC) whenever possible to increase immersion.
 
-%^ULINE%^%^MAGENTA%^Rule 2%^RESET%^%^CYAN%^ Spaek Enlgish.%^RESET%^
-  ShadowGate has own language system to disguise and enhance roleplaying. Please refer to %^ORANGE%^<help languages>%^RESET%^.
+%^ULINE%^%^MAGENTA%^Rule 3:%^RESET%^ Speak English.
 
-%^ULINE%^%^MAGENTA%^Rule 3%^RESET%^%^CYAN%^ Follow laws.%^RESET%^
-  Even though this is an adult game, we are limited by what we can allow by the real world jurisdictions. This is not some dark place of the internet. Don't roleplay child abuse or sexual assault. Do not use the game as a medium for illegal activities.
+%^ULINE%^%^MAGENTA%^Rule 4:%^RESET%^ Any scripts, triggers, etc. that automate combat are illegal.
 
-%^CYAN%^In addition to this help file rules are set in %^ORANGE%^<help line use>%^CYAN%^ and %^ORANGE%^<help pkilling>%^CYAN%^:
- %^MAGENTA%^- %^ORANGE%^Line use%^CYAN%^ defines how you are expected behave on out of character channels
- %^MAGENTA%^- %^ORANGE%^Pkilling%^CYAN%^ describes how you are expected to behave in player kill interrations.
-%^CYAN%^There are recommendations scattered across other help files you might be encouraged to follow, but you won't be held accountable for not knowing them.%^RESET%^
+%^ULINE%^%^MAGENTA%^Rule 5:%^RESET%^ Antagonistic actions may only occur between characters who have dropped their NOPK flag. See%^ORANGE%^<pk rules>%^RESET%^.
 
-%^CYAN%^See also:%^RESET%^ line use, game, pkilling, fade to black
+%^ULINE%^%^MAGENTA%^Rule 6:%^RESET%^ Sexual encounters require the OOC consent of all players involved. Consent may be withdrawn at any time without question. All participating characters must be adult members of their race.
+
+%^ULINE%^%^MAGENTA%^Rule 7:%^RESET%^ Respect all Fade to Black requests immediately.
+
+%^ULINE%^%^MAGENTA%^Rule 8:%^RESET%^ You are allowed multiple characters, but may only have one player character logged on at any given time.
+
+%^ULINE%^%^MAGENTA%^Rule 9:%^RESET%^ Offline collaboration is allowed, but attempts to demand or sleuth another's personal information will not be tolerated. OOC threats or abuse in any form, in game or out of game, is illegal.
+
+%^ULINE%^%^MAGENTA%^Rule 10:%^RESET%^ Using this game as a medium to conduct illegal activities is strictly forbidden and will always result in rid and banishment. All character interactions are logged and may be observed by our staff.
+
+In addition to these rules, are you are expected to know and abide by the rules listed in %^ORANGE%^<help pk rules>%^RESET%^, %^ORANGE%^<help post pk>%^RESET%^ and %^ORANGE%^<help line use>%^RESET%^. Failure to comply with the rules will result in punishment and repeat offenders may be banned and/or rid. See also %^ORANGE%^<help shorthand>%^RESET%^ for a list of common abbreviations and their meaning. If these rules are unclear, contact our staff for clarification. 
+
+%^CYAN%^SEE ALSO: %^RESET%^shorthand, pk rules, post pk, languages, roleplaying, line use, fade to black, game, lawmail, avatarmail, pkmail, races, set
