--- a/doc/help/user/rules/rules
+++ b/doc/help/user/rules/rules
@@ -26,4 +26,4 @@ If you notice something that may be illegal, or if you encounter a dispute with 
 
 In addition to these rules, are you are expected to know and abide by the rules listed in %^ORANGE%^<help pk rules>%^RESET%^, %^ORANGE%^<help post pk>%^RESET%^ and %^ORANGE%^<help line use>%^RESET%^. Failure to comply with the rules will result in punishment and repeat offenders may be banned and/or rid. See also %^ORANGE%^<help shorthand>%^RESET%^ for a list of common abbreviations and their meaning. If these rules are unclear, contact our staff for clarification. 
 
-%^CYAN%^SEE ALSO: %^RESET%^shorthand, pk rules, post pk, languages, roleplaying, line use, fade to black, game, lawmail, avatarmail, pkmail, races, set
+%^CYAN%^SEE ALSO: %^RESET%^shorthand, pk rules, post pk rules, languages, roleplaying, line use, fade to black, game, lawmail, avatarmail, pkmail, races, set
