--- a/doc/help/user/rules/rules
+++ b/doc/help/user/rules/rules
@@ -16,7 +16,7 @@ If you notice something that may be illegal, or if you encounter a dispute with 
 
 %^ULINE%^%^MAGENTA%^Rule 6:%^RESET%^ Sexual encounters require the OOC consent of all players involved. Consent may be withdrawn at any time without question. All participating characters must be adult members of their race.
 
-%^ULINE%^%^MAGENTA%^Rule 7:%^RESET%^ Respect all Fade to Black requests immediately See %^ORANGE%^<help fade to black>%^RESET%^.
+%^ULINE%^%^MAGENTA%^Rule 7:%^RESET%^ Respect all Fade to Black requests immediately. See %^ORANGE%^<help fade to black>%^RESET%^.
 
 %^ULINE%^%^MAGENTA%^Rule 8:%^RESET%^ You are allowed multiple characters, but may only have one player character logged on at any given time.
 
