--- a/doc/help/user/rules/rules
+++ b/doc/help/user/rules/rules
@@ -16,7 +16,7 @@ If you notice something that may be illegal, or if you encounter a dispute with 
 
 %^ULINE%^%^MAGENTA%^Rule 6:%^RESET%^ Sexual encounters require the OOC consent of all players involved. Consent may be withdrawn at any time without question. All participating characters must be adult members of their race.
 
-%^ULINE%^%^MAGENTA%^Rule 7:%^RESET%^ Respect all Fade to Black requests immediately. See %^ORANGE%^<help fade to black>%^RESET%^.
+%^ULINE%^%^MAGENTA%^Rule 7:%^RESET%^ Respect all Fade to Black requests immediately. See %^ORANGE%^<help fade to black>%^RESET%^ and %^ORANGE%^<help fade away>%^RESET%^.
 
 %^ULINE%^%^MAGENTA%^Rule 8:%^RESET%^ You are allowed multiple characters, but may only have one player character logged on at any given time.
 
@@ -26,4 +26,4 @@ If you notice something that may be illegal, or if you encounter a dispute with 
 
 In addition to these rules, are you are expected to know and abide by the rules listed in %^ORANGE%^<help pk rules>%^RESET%^, %^ORANGE%^<help post pk>%^RESET%^ and %^ORANGE%^<help line use>%^RESET%^. Failure to comply with the rules will result in punishment and repeat offenders may be banned and/or rid. See also %^ORANGE%^<help shorthand>%^RESET%^ for a list of common abbreviations and their meaning. If these rules are unclear, contact our staff for clarification. 
 
-%^CYAN%^SEE ALSO: %^RESET%^shorthand, pk rules, post pk rules, languages, roleplaying, line use, fade to black, game, lawmail, avatarmail, pkmail, races, set
+%^CYAN%^SEE ALSO: %^RESET%^shorthand, pk rules, post pk rules, languages, roleplaying, line use, fade to black, fade away, game, lawmail, avatarmail, pkmail, races, set
