--- a/doc/help/user/rules/rules
+++ b/doc/help/user/rules/rules
@@ -6,13 +6,16 @@ If you notice something that may be illegal, or if you encounter a dispute with 
 
 %^ULINE%^%^MAGENTA%^Rule 1:%^RESET%^ Be kind and respectful towards your fellow players and our staff. This is a game, and we can settle/adjudicate all disagreements amicably. Though the game allows you to role-play an evil character, always be considerate out of character (OOC).
  
-%^ULINE%^%^MAGENTA%^Rule 2:%^RESET%^ We are a role-playing MUD. When interacting with other characters in the game world, you are expected to stay in character (IC) whenever possible to increase immersion.
+%^ULINE%^%^MAGENTA%^Rule 2:%^RESET%^ We are a role-playing MUD. When interacting with other characters in the game world, you are expected to stay in character (IC) whenever possible to increase immersion. 
 
 %^ULINE%^%^MAGENTA%^Rule 3:%^RESET%^ Speak English.
 
 %^ULINE%^%^MAGENTA%^Rule 4:%^RESET%^ Any scripts, triggers, etc. that automate combat are illegal.
 
-%^ULINE%^%^MAGENTA%^Rule 5:%^RESET%^ Antagonistic actions may only occur between characters who have dropped their NOPK flag. See %^ORANGE%^<pk rules>%^RESET%^ and %^ORANGE%^<post pk rules>%^RESET%^.
+%^ULINE%^%^MAGENTA%^Rule 5:%^RESET%^ Antagonistic actions may only occur between characters who have dropped their NOPK flag. See %^ORANGE%^<pk rules>%^RESET%^ and %^ORANGE%^<post pk rules>%^RESET%^. You are required to write a %^ORANGE%^<pkmail>%^RESET%^ in the following circumstances: 
+    %^MAGENTA%^<>%^RESET%^ When you are involved in, or witness, a player vs player event, regardless of the outcome.
+    %^MAGENTA%^<>%^RESET%^ When you commit, or are involved in, an action that makes you wanted in a city, even if that action was unintentional.
+    %^MAGENTA%^<>%^RESET%^ This applies even if you have a NOPK-flag or choose to invoke the %^ORANGE%^<fade away>%^RESET%^ rule.
 
 %^ULINE%^%^MAGENTA%^Rule 6:%^RESET%^ Sexual encounters require the OOC consent of all players involved. Consent may be withdrawn at any time without question. All participating characters must be adult members of their race.
 
