--- a/doc/help/user/rules/rules
+++ b/doc/help/user/rules/rules
@@ -6,9 +6,9 @@ If you notice something that may be illegal, or if you encounter a dispute with 
 
 %^ULINE%^%^MAGENTA%^Rule 1:%^RESET%^ Be kind and respectful towards your fellow players and our staff. This is a game, and we can settle/adjudicate all disagreements amicably. Though the game allows you to role-play an evil character, always be considerate out of character (OOC).
  
-%^ULINE%^%^MAGENTA%^Rule 2:%^RESET%^ We are a role-playing MUD. When interacting with other characters in the game world, you are expected to stay in character (IC) whenever possible to increase immersion. 
+%^ULINE%^%^MAGENTA%^Rule 2:%^RESET%^ We are a role-playing MUD. When interacting with the game world, you are expected to stay in character (IC) whenever possible to increase immersion. 
 
-%^ULINE%^%^MAGENTA%^Rule 3:%^RESET%^ Speak English.
+%^ULINE%^%^MAGENTA%^Rule 3:%^RESET%^ Speak (write) English. Avoid using modern abbreviations.
 
 %^ULINE%^%^MAGENTA%^Rule 4:%^RESET%^ Any scripts, triggers, etc. that automate combat are illegal.
 
@@ -21,12 +21,12 @@ If you notice something that may be illegal, or if you encounter a dispute with 
 
 %^ULINE%^%^MAGENTA%^Rule 7:%^RESET%^ Respect all Fade to Black requests immediately. See %^ORANGE%^<help fade to black>%^RESET%^ and %^ORANGE%^<help fade away>%^RESET%^.
 
-%^ULINE%^%^MAGENTA%^Rule 8:%^RESET%^ You are allowed multiple characters, but may only have one player character logged on at any given time.
+%^ULINE%^%^MAGENTA%^Rule 8:%^RESET%^ You are allowed multiple characters, but may only have one player character logged on at any given time. Nothing may be transferred between your characters and they may not know each other or be related.
 
 %^ULINE%^%^MAGENTA%^Rule 9:%^RESET%^ Offline collaboration is allowed, but attempts to demand or sleuth another's personal information will not be tolerated. OOC threats or abuse in any form, in game or out of game, is illegal.
 
 %^ULINE%^%^MAGENTA%^Rule 10:%^RESET%^ Using this game as a medium to conduct illegal activities is strictly forbidden and will always result in rid and banishment. All character interactions are logged and may be observed by our staff.
 
-In addition to these rules, are you are expected to know and abide by the rules listed in %^ORANGE%^<help pk rules>%^RESET%^, %^ORANGE%^<help post pk>%^RESET%^ and %^ORANGE%^<help line use>%^RESET%^. Failure to comply with the rules will result in punishment and repeat offenders may be banned and/or rid. See also %^ORANGE%^<help shorthand>%^RESET%^ for a list of common abbreviations and their meaning. If these rules are unclear, contact our staff for clarification. 
+In addition to these rules, are you are expected to know and abide by the rules listed in %^ORANGE%^<help pk rules>%^RESET%^, %^ORANGE%^<help post pk rules>%^RESET%^ and %^ORANGE%^<help line use>%^RESET%^. Failure to comply with the rules will result in punishment and repeat offenders may be banned and/or rid. See also %^ORANGE%^<help shorthand>%^RESET%^ for a list of common abbreviations and their meaning. If these rules are unclear, contact our staff for clarification. 
 
 %^CYAN%^SEE ALSO: %^RESET%^shorthand, pk rules, post pk rules, languages, roleplaying, line use, fade to black, fade away, game, lawmail, avatarmail, pkmail, races, set
